syntax = "proto3";
package caretta;
import "google/protobuf/timestamp.proto";

enum PeerListOrderBy {
    CREATED_AT = 0;
    UPDATED_AT = 1;
    PEER_ID = 2;
}

service CachedPeerService {
    rpc List(CachedPeerListRequest) returns (CachedPeerListResponse);
}

message CachedPeerListRequest {}

message CachedPeerMessage {
    uint32 number = 1;
    string peer_id = 2;
    google.protobuf.Timestamp created_at = 3;
    repeated CachedAddressMessage addresses = 4;
}

message CachedAddressMessage {
    uint32 number = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string multiaddress = 4;
}

message CachedPeerListResponse {
    repeated CachedPeerMessage peers = 1;
}
